Fixed events calendar on mobile version

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -818,9 +818,17 @@ p > tag {
 /*  --- new ---- */
 
 @media (max-width: 700px) {
-	iframe#calendar {
+	div#calendar {
+		margin: auto;
 		width: 50%;
 	}	
+}
+
+@media (min-width: 700px) {
+	div#calendar {
+		margin: auto;
+		width: 900px;
+	}
 }
 
 @media (max-width: 700px) {
